1999-05-18  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_utils.adb: Fix from Bart Nickerson for VMS (incorrect
	executable lookup).

1999-05-15  Laurent Pautet  <pautet@dorine.enst.fr>

	* xe_parse.adb: Main subprogram cannot be a child subprogram (fix
	6510-G02 or 6510-006). Check configuration name conflict (fix
	6510-G01 or 6510-005).

1999-05-06  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_check.adb, xe_back.adb: Resolve a visibility conflict.

1999-04-12  Samuel Tardieu  <sam@inf.enst.fr>

	* Makefile.am: Remove the GNATMAKE alias as it will be defined by
	configure.
	Replace ${} by $() so that it doesn't confuse automake any longer.

1999-04-08  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_back.adb, xe_back.ads, xe_check.adb, xe_stubs.adb,
	xe_utils.adb, xe_utils.adb: the previous check-in was taking a
	slightly un-synchronized version of the gnat sources.

1999-04-07  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_check.adb, xe_back.adb: Update in regard to gnat changes.

1999-03-23  Pascal Obry <obry@gnat.com>

	* xe_reg.ads, xe_reg.adb: New package to handle the NT registry.
	This is needed for the NT binary release. There is one function
	exported, Get_GARLIC_Dir that will return the directory where the
	GARLIC runtime is to be found.

	* Makefile.in, Makefile.am: Change xe_defs.adb generation when
	under Windows NT. In the NT case, xe_defs.adb will use xe_reg
	to find the GARLIC library.
	
1999-02-02  Laurent Pautet  <pautet@scapin.enst.fr>

	* config.sdefault: Fix installation on NT (Arno's suggestion).

1999-01-20  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_utils.adb: Use GLADE_LIBRARY_DIR env. var. to search GARLIC
	lib. This enhancement allows binary release.

1999-01-14  Samuel Tardieu  <sam@inf.enst.fr>

	* xe_stubs.adb: Fix spelling mistake in generated file, which
	prevented the Task_Pool attribute from working.

1999-01-07  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_check.adb: Final fix for 6023-G01. Set filename info back to