@@ -1,3 +1,8 @@
+1999-05-20  Samuel Tardieu  <sam@inf.enst.fr>
+
+	* xe_stubs.adb: Simulate --nolaunch on the command line when the
+	starter is Ada or None. Fixes recent regressions.
+
 1999-05-18  Laurent Pautet  <pautet@scapin.enst.fr>
 
 	* xe_utils.adb: Fix from Bart Nickerson for VMS (incorrect
@@ -1187,4 +1192,3 @@ Sat Mar 21 22:38:35 1998  Laurent Pautet  <pautet@paris.act-europe.fr>
 1996-09-11  Samuel Tardieu <sam@inf.enst.fr>
         
         * config.sdefault: Replaced which by type.
-        
